# commit-with-ai

./: .gitignore  CHANGELOG.md  Makefile  README.md  git-auto-commit.py  main.py  pyproject.toml  release-please-config.json
.github/workflows/: publish-pypi.yml  release-please.yml
commit_with_ai/: __init__.py  __main__.py  core.py
commit_with_ai/providers/: __init__.py  base.py  claude_cli.py  gemini.py
openspec/changes/archive/2026-03-23-add-claude-cli-provider/: .openspec.yaml  design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-23-add-claude-cli-provider/specs/claude-cli-provider/: spec.md
openspec/changes/archive/2026-03-23-add-claude-cli-provider/specs/provider-system/: spec.md
openspec/changes/archive/2026-03-24-optimize-cli-invocation/: .openspec.yaml  design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-24-optimize-cli-invocation/specs/claude-cli-provider/: spec.md
openspec/specs/claude-cli-provider/: spec.md
openspec/specs/provider-system/: spec.md
tests/: test_cli.py  test_core.py  test_providers_base.py  test_providers_claude_cli.py  test_providers_gemini.py
