[project]
name = "git-auto-commit"
version = "0.1.0"
description = "AI-powered git commit message generator using Gemini API"
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
authors = [
    { name = "Chen-Wei Sun", email = "chenwei791129@livemail.tw" }
]
dependencies = [
    "google-genai>=1.60.0",
]
